v7.5.0 ():
::game additions:
- add support for Super Mario Bros. Frozen Editon

::misc. changes:
- fix ID6 for NSMBW3: The Final Levels in README.GAMEIDS
- other minor changes

v7.4.0 (20160903):
::Tokyo Mirage Sessions #FE Restoration Patcher
- use 'Restoration' instead of 'Uncensored' as Name
- more failsafe build-directory name
- add support for downloading xdelta files with --download
- check whether files have already been downloaded and use those
- for xdelta patches and original cpk files, now check whether every single
  file exists, rather than just one of them
- for cpk file path support both the top level directory of the dump as well
  as the sub level directory which holds the cpk files, read: when your dump
  is in /home/test/TMSFE you were previously required to set the cpk path to
  /home/test/TMSFE/vol/content/Pack now using /home/test/TMSFE will work, too,
  as the script will look for the sub directory vol/content/Pack on it's own

::game updates:
- update Cliff Super Mario Bros. Wii to version 1.1.1
- update Revised Super Mario Bros. Wii to version 1.1
- update The Legend of Yoshi to version 2016-08-31

::misc. changes:
- use 'wget -nv' instead of 'wget -q'
  - except for cover downloader

v7.3.1.1 (20160829):
::bug fixes
- fixed brocken nsmb-helper script

v7.3.1 (20160828):
::bug fixes
- fixed that --iso, --rom, --patch, --xdelta, --cpk and --riivolution command
  line flags failed when relative paths were given (regression from 7.2.2)
- fixed that temporary files were kept when downloads failed, causing required
  user-input for wget when trying again
- fixed that --cpk and --xdelta command line flags never actually checked wether
  the given directory does exist, before trying to patch the game [the game
  patcher does, too, but it should fail immediately upon wrong user-input]
- remove build directory before trying to build a game, not afterwards, so that
  in case a build failed in batch-mode, the next one can be tried without issues